<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/digitDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="0.5"
        android:layout_columnSpan="4"
        android:layout_gravity="end"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:text="@string/default_num_display"
        android:textAlignment="viewEnd"
        android:textSize="50sp" />

    <Button
        android:id="@+id/clear"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onClear"
        android:text="@string/c" />

    <Button
        android:id="@+id/slash"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDivide"
        android:text="@string/slash" />

    <Button
        android:id="@+id/asterix"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onMultiply"
        android:text="@string/asterix" />

    <Button
        android:id="@+id/dash"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onSubtract"
        android:text="@string/dash" />

    <Button
        android:id="@+id/seven"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/seven" />

    <Button
        android:id="@+id/eight"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/eight" />

    <Button
        android:id="@+id/nine"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/nine" />

    <Button
        android:id="@+id/plus"
        android:layout_rowSpan="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onAdd"
        android:text="@string/plus" />

    <Button
        android:id="@+id/four"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/four" />

    <Button
        android:id="@+id/five"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/five" />

    <Button
        android:id="@+id/six"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/six" />

    <Button
        android:id="@+id/one"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/one" />

    <Button
        android:id="@+id/two"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/two" />

    <Button
        android:id="@+id/three"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/three" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_rowSpan="2"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onEnter"
        android:text="@string/enter" />

    <Button
        android:id="@+id/zero"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDigit"
        android:text="@string/zero" />

    <Button
        android:id="@+id/dot"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:onClick="onDecimal"
        android:text="@string/dot" />


</GridLayout>